# self-snn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: agency.yaml  agency_mps.yaml  agency_small.yaml  s0_minimal.yaml  s1_words.yaml  s2_sentence.yaml  s3_video.yaml
scripts/: dump_brain_graph.py  eval_figs.py  eval_growth_prune.py  eval_ignition.py  eval_lang.py  eval_memory.py  eval_router_energy.py  eval_self_consistency.py  eval_sentence.py  eval_video.py  gen_toy_data.py  run_all.py  run_brain_infer.py  sleep_consolidate.py  train.py  train_from_schedule.py
self_snn/: __init__.py
self_snn/agency/: act.py  commit.py  consistency.py  intention.py  self_model.py
self_snn/api/: __init__.py  infer_brain.py
self_snn/core/: introspect.py  pacemaker.py  salience.py  wm.py  workspace.py
self_snn/data/: task_adapter.py
self_snn/memory/: delay_mem.py  episodic_index.py
self_snn/meta/: eprop_head.py  plasticity.py
self_snn/router/: experts.py  router.py
self_snn/utils/: config_loader.py  encoders.py  energy.py  logging_cn.py  masks.py  viz.py
self_snn/worldmodel/: imagination.py  pred_code.py
tests/: test_agency_cycle.py  test_brain_infer_api.py  test_delay_mem.py  test_dump_brain_graph_json.py  test_efference_copy.py  test_episodic_index.py  test_eval_scripts_json_mode.py  test_ignition.py  test_plasticity.py  test_router_mask.py  test_self_key_stability.py  test_task_adapter_generated_to_dataset.py  test_train_from_schedule_real_small.py  test_train_from_schedule_stub.py  test_viz_and_logs.py  test_worldmodel_basic.py
